--- a/css/general.css
+++ b/css/general.css
@@ -539,7 +539,10 @@ a{
 	position:fixed;width:100%;z-index:1
 	}
 .w3-top{
-	top:0
+	top:0;
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);  
 	}
 .w3-bottom{
 	bottom:0
